--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -203,7 +203,7 @@ The chapter called
 \emph{Application for searching nearby identified addresses}
 describes the functionality, architecture and implementation of the application that was created as part of this work.
 
-The chapter \emph{Statistics of Valhalla cryptomarket} consists of various statistics about
+The chapter \emph{Valhalla cryptomarket statistic} consists of various statistics about
 drug markets gathered by website scraping of the Valhalla market.
 
 Chapter \emph{Conclusions and future work} discusses the achieved goals, possible future extension and development
@@ -840,7 +840,6 @@ The generated identities are stored as rows in csv files that have 3 columns:
 \end{enumerate}
 
 
-========================================= V TOMTO SOUBORU ZACINAJI MOJE UPRAVY TADY
 
 \section{Using own transactions to identify market wallets}
 \label{Using own transactions to identify market wallets}
@@ -861,11 +860,11 @@ bitcoins from during withdrawals as owned by cryptomarket.
 Knowing these addresses alone wouldn't help us to decide
 whether someone sent or received bitcoins from the Valhalla cryptomarket.
 It is a common practise for any service accepting bitcoins to
-use multiple bitcoin addresses, both for the
-bitcoin core and other bitcoin wallet software. For each Valhalla market account,
+use multiple bitcoin addresses.
+For each Valhalla market account,
 a unique deposit address is required, so that the system can associate
 a bitcoin transaction with a Valhalla market account.
-In order to solve this issue, we used two heuristics widely used
+In order to solve this issue, we used two heuristics used
 in the previous works \parencite{androulaki2013evaluating}\parencite{reid2013analysis}
 for clustering bitcoin addresses belonging to same user.
 
@@ -880,33 +879,33 @@ When one transaction has two outputs with two different addresses, we assume one
 address and is owned by the sender.
 We then search through the the blockchain for the first occurence of each output address of the 
 transaction. If one of the output addresses had been used before the transaction and the second has not,
-we can then safely assume, that the second one is a change address\parencite{androulaki2013evaluating}.
+we can then safely assume, that the second one is a change address \parencite{androulaki2013evaluating}.
 The second heuristic's scheme is on figure \ref{heur2}.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=1\textwidth]{heur1}
+    \includegraphics[width=0.6\textwidth]{heur1.pdf}
     \caption{Schema how first heuristic works}
     \label{heur1}
 \end{figure}
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=1\textwidth]{heur2}
+    \includegraphics[width=0.8\textwidth]{heur2.pdf}
     \caption{Schema how second heuristic works}
     \label{heur2}
 \end{figure}
 
-Both of these heuristics are pretty strict and have just a negligible chance of falsely merging
-addresses not belonging to the same user\parencite{androulaki2013evaluating}.
+Both of these heuristics are pretty strict and have just a slim chance of falsely merging
+addresses not belonging to the same user \parencite{androulaki2013evaluating}.
 Although the concept of multisignature wallets and a few proposed anonymisation methods could make
 these heuristics misleading (like CoinJoin mixer and dark wallet), they only contribute to a 
 negligible percentage of all transactions.
 
 We measured the success of heuristic clustering in two ways.
 We had two accounts on Valhalla market, each performing one deposit of 0.011 BTC and immediately 10 withdrawals of
-0.01 BTC, with roughly 0.001 BTC spent on cryptomarket fees.
-For the first account, we performed these transactions on February 8th 2018, for the second one on March 4th 2018.
+0.001 BTC, with roughly 0.001 BTC spent on cryptomarket fees.
+For the first account, we performed these transactions on January 11th 2018, for the second one on February 13th 2018.
 
 We created a new bitcoin wallet via Mycelium mobile app, deposited bitcoins into it
 from bittrex exchange and used the wallet only with the first account.
@@ -920,25 +919,23 @@ We then ran our application and looked into the neo4j database, storing
 blockchain transaction graph and associated identities.
 We checked the cryptomarket's addresses associated with our deposits and withdrawals,
 whether they were clustered as one identity. The table \ref{cluster} shows, how many identities
-were associated with given deposits and withdrawals. The heuristics could not associate our
+were associated with given deposits and withdrawals. The heuristics could not cluster our
 deposit addresses, because the deposit addresses just received bitcoins from us and not send them
 somewhere else till that time. Only 2 identities managed to contain addresses from both accounts.
 
 Afterwards, we have checked, how much bitcoins have these
-identities received between 15. 1. and 15. 2. We scraped the Valhalla cryptomarket between 14. 2. and 15. 2.
+identities received between 14. 1. and 14. 2. We scraped the Valhalla cryptomarket between 14. 2. and 15. 2.
 and received data from feedback pages, which we used to estimate 
 the minimal amount of bitcoins users spent over the previous month on Valhalla market.
-We estimated in chapter \ref{stats}, that users spent at least 527730EUR during that one month period.
-With average bitcoin price 8219EUR it roughly equals 527730/8219 = 64.2BTC
+We estimated in chapter \ref{stats}, that users spent at least 527\,730 EUR during that one month period.
+With average bitcoin price 8\,219EUR it roughly equals to 64.2 bitcoins.
 The amount of bitcions these identities received is also in table \ref{cluster}.
 Our heuristics were not enough to cluster majority of market's transactions/addresses as one identity.
-Hovewer, with just two accounts, 2 deposits and 20 withdrawals, we were able to identify 5.71BTC(9\%) out of estimated
-64.2 BTC the market received within that one month timeframe.
+Hovewer, with just two accounts, 2 deposits and 20 withdrawals, we were able to identify 5.71(9\%) bitcoins out of estimated
+64.2~bitcoins the market received within that one month timeframe.
 
 \begin{table}
-    \caption{Mapping of found identities to addresses used in deposits and withdrawals
-    each row in table represent one identity and numbers indicate how many deposits/withdrawals from
-    our accounts were associated with that identity}
+    \caption{Mapping of found identities to addresses used in deposits and withdrawals}
     \label{cluster}
     \begin{tabular}{|l|l|l|l|}
     Identity &\multicolumn{1}{|p{4cm}|}{\centering Deposits:withdrawals \\ from first account }&\multicolumn{1}{|p{4cm}|}{\centering Deposits:withdrawals \\ from second account}
@@ -980,7 +977,7 @@ It consists of multiple python scripts, divided into 5 categories.
     \label{application_architecture}
 \end{figure}
 
-Scripts for scraping Valhalla market in order to get statistical data used in next chapter are in statistics folder.
+Scripts for scraping Valhalla market in order to get data used in next chapter are in statistics folder.
 Script \emph{listing-scraper.sh} goes through Valhalla listings and downloads the HTML source code of these pages.
 Script \emph{listing-parser.py} process the downloaded pages and generates the \emph{listings.csv} file with information about listings.
 \emph{Seller-scraper.py} opens \emph{listings.csv} and downloads HTML source of vendors' profile pages. 
@@ -990,12 +987,11 @@ in tables \ref{datalist}, \ref{datavendor} and \ref{datafeedback}. We used these
 assembling Valhalla cryptomarket statistics contained in the last chapter.
 
 The scripts for obtaining data for the application can be found in the \emph{identity--scraping} folder.
-Each one of the scripts named scraper\_\{bitcointalk, blockchaininfo, reddit, twitter\}.py scrape webpage mentioned
+Each one of the scripts scrape webpage mentioned
 in its name and generates a csv file with 3 columns:
 bitcoin address, URL where the address was scraped and the associated identity (eg. nickname).
 Script blockchain\_to\_csv.py uses bitcoin-core API to iterate through bitcoin blockchain 
-and generate several csv files with the transaction data and bitcoin blockchain addresses required for the core application.
-The script generates multiple csv files, which are later imported into neo4j database, as well as 
+and generate several csv files with the transaction data and bitcoin blockchain addresses, which are later imported into neo4j database, as well as 
 files with identities.
 
 In order to create a tool for effectively searching and visualising both blockchain and web-scraped
@@ -1010,7 +1006,7 @@ outputs, inputs and time of transactions in the database in order to be able to 
 The graph schema is in figure \ref{neo4jschema}. The entities in the schema are represented as vertices
  in the database and relationships between them are edges.
 
-The importing script \emph{csv\_to\_neo4j.py} is responsible for parsing
+The importing script \emph{csv\_to\_db.py} is responsible for parsing
 previously generated csv files and importing the data into neo4j database.
 Having csv files as interminiary step between parsing blockchain and importing it to the database
 proved to be useful for debugging application, while it also provided an easy way to
@@ -1059,11 +1055,11 @@ and ended up in address that we were able to find associated identity.
 \label{stats}
 
 We managed to scrape 25309 listings, 981 vendors and 6381 feedbacks.
-There were 17314(68 \%) listings related to selling drug substances, the rest
+There were 17314 (68 \%) listings related to selling drug substances, the rest
 were related to ebooks, premium accounts, guns, fake IDs etc.
 Vendors had from 1 (90 vendors) to 1083 (1 vendor)
 active listings, with average of 25.69 (SD = 58.06)
-and median = 11.00 listings per vendor.
+and median of 11.00 listings per vendor.
 Most vendors tend to have just few active listings,
 as can be seen on histogram \ref{listingsxsellers}.
 The histogram does not show 19 vendors with more than 200 listings.
@@ -1077,8 +1073,8 @@ The histogram does not show 19 vendors with more than 200 listings.
 \end{figure}
 
 The vendors were shipping drugs from 39 distinct countries.
-The frequency of shipping-source countries can be found in the \ref{shipcount} table.
-The \ref{richvendors} table lists countries of vendors that have achieved 10000EUR(150 vendors \~ 15\% ) or more in their revenue.
+The occurence of countries as the shipping origin can be found in the table \ref{shipcount}.
+The table \ref{richvendors} lists countries of vendors that have achieved 10000EUR (150 vendors \~ 15\% ) or more in their revenue.
 Valhalla was originally estabilished as a local Finnish crypto market,
 which might be the reason for surprisingly many vendors shipping from Finland and also large percentage
 of Finns among high revenue vendors. They might be on the market since
@@ -1189,7 +1185,6 @@ The \ref{listingxprice} figure shows distribution of prices of all listings in
 these listings are somehow special, except for the price.
 
 \begin{figure}[!htb]
-\label{listingxprice}
 \subfloat{
 \label{listingxprice}
     \centering
@@ -1353,4 +1348,4 @@ different options viable for storing and retrieving data on server hardware
 
 \end{document}
 
-statistics of valhalla cryptomarket - pozor, nazev kapitoly zmenen na "Valhalla cryptomarket statistics", a je odkazovany v prvni casti dokumentu
+%statistics of valhalla cryptomarket - pozor, nazev kapitoly zmenen na "Valhalla cryptomarket statistics", a je odkazovany v prvni casti dokumentu
