--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -580,6 +580,7 @@ Both vendor and customer have their public keys published on their profile page 
 party to encrypt messages to them. This enables vendors and users to keep their communication private also from the administrators of the marketplace.
 
 \chapter{Related work}
+\label{relw}
 \section{Blockchain analysis and de-anonymization of bitcoin addresses}
 
 Multiple papers and tools were published regarding the blockchain analysis.
@@ -1055,7 +1056,7 @@ and ended up in address that we were able to find associated identity.
 \label{stats}
 
 We managed to scrape 25309 listings, 981 vendors and 6381 feedbacks.
-There were 17314 (68 \%) listings related to selling drug substances, the rest
+There were 17\,314 (68 \%) listings related to selling drug substances, the rest
 were related to ebooks, premium accounts, guns, fake IDs etc.
 Vendors had from 1 (90 vendors) to 1083 (1 vendor)
 active listings, with average of 25.69 (SD = 58.06)
@@ -1074,7 +1075,7 @@ The histogram does not show 19 vendors with more than 200 listings.
 
 The vendors were shipping drugs from 39 distinct countries.
 The occurence of countries as the shipping origin can be found in the table \ref{shipcount}.
-The table \ref{richvendors} lists countries of vendors that have achieved 10000EUR (150 vendors \~ 15\% ) or more in their revenue.
+The table \ref{richvendors} lists countries of vendors that have achieved 10\,000EUR (150 vendors, 15\% ) or more in their revenue.
 Valhalla was originally estabilished as a local Finnish crypto market,
 which might be the reason for surprisingly many vendors shipping from Finland and also large percentage
 of Finns among high revenue vendors. They might be on the market since
@@ -1084,7 +1085,7 @@ the time it was not internationally popular and had more time to generate revenu
     \caption{Countries that vendors ship from}
     \label{shipcount}
     \begin{tabular}{|l|l|}
-    Countries vendors are shipping from  & Count of vendors\\
+    Country  & Count of vendors\\
         Finland                                      & 28  \\ 
         United Kingdom                               & 23  \\ 
         United States                                & 16  \\ 
@@ -1138,15 +1139,15 @@ Unknown & 69 \\
 We looked at the total revenue of vendors, as depicted in figure \ref{total-rev}. 
 The total revenue mentioned in the vendor's profile page is capped at 10 000 Eur.
 There are two major groups of vendors regarded to their revenue. 
-Majority(598 vendors \~ 60 \%) of vendors have not had any positive or negative feedbacks and all of these vendors
-(except for 3) earned less than 300EUR on cryptomarket over their lifetime.
+Majority (598 vendors, 60\%) of vendors have not had any\newline positive or negative feedbacks and all of these vendors
+(except for 3)\newline earned less than 300EUR on cryptomarket over their lifetime.
 Please note we were able to scrape just the vendors with active listings,
 so there might be much more vendors who stopped using Valhalla after
 not being able to earn substantional amount of money.
 The second group is 150 vendors (15 \%) who earned 10 000 EUR or more.
 
 Vendors, who had high revenue, maintained high ratio of positive feedbacks.
-When counting only vendors with more than 10 reviews(304 vendors \~ 31\%),
+When counting only vendors with more than 10 reviews (304 vendors, 31\%),
 the mean is 93.7\% and median 98.3\% of positive feedbacks.
 Vendors with 1 to 10 reviews had on average 27.2\% of positive feedbacks.
 Figure \ref{posratrev} shows the the distribution of vendors with similar
@@ -1156,7 +1157,7 @@ having bad reputation during first few sales shuts down any opportunity
 for the vendor to continue selling his goods. It also concludes that majority of vendors don't succeed or use
 the market merely sporadically.
 
-The \ref{listingxprice} figure shows distribution of prices of all listings in
+The figure \ref{listingxprice} shows distribution of prices of all listings in
  the market (on the left graph) and the price distribution in feedbacks (on the right).
  Some listings might be counted multiple times or not at all
  in the right graph, because one listing might be bought several times or not at all
@@ -1165,15 +1166,12 @@ The \ref{listingxprice} figure shows distribution of prices of all listings in
  that are actually bought at market, because feedbacks can be given only by users who
  bought something from vendor. We calculated price of listings in EUR as 
  price in bitcoin multiplied by the average price of bitcoin for 30 days before the scraping
- (8219 EUR for 20.1.2018 - 20.2.2018, daily prices taken from blockchain.info).
+ (8219 EUR for 14.1.2018 - 14.2.2018, daily prices taken from blockchain.info).
  
  The average price of listing is 336.2 Eur(1368.2 SD!) with median of 71.3 Eur,
  while feedbacks had average 82.7Eur(150.7 SD) with median of 55 Eur.
-  There were only 22(0.3 \%) feedbacks with price > 1000EUR
- and only 5(0.01 \%) feedbacks with price > 2000 Eur.
-  There were 1533(6.05 \%) active listings
- with price greater than 1000 EUR and
- 673(2.7 \%) listings with price greater than 2000 Eur.
+  There were 1533(6.05\%) active listings with price greater than 1000 EUR but 
+  only 22(0.3\%) feedbacks with price greater than 1000EUR.
  The price distributions in \ref{listingxprice} show,
  that while there is a lot of free or very expensive listings,
  the majority(5937, 93\%) of trades were between 0 and 200 EUR.
@@ -1182,20 +1180,18 @@ The \ref{listingxprice} figure shows distribution of prices of all listings in
  The free listings had titles like "CARDING SERVICE *FREE*",
   "Free Carding Tutorial 2017" and "FREE SAMPLE 84\% MDMA CRYSTAL ROCKS"
  The titles of expensive listings don't indicate that 
-these listings are somehow special, except for the price.
+these listings are somehow special, except for the higher amount of drugs offered.
 
 \begin{figure}[!htb]
 \subfloat{
 \label{listingxprice}
     \centering
     \includegraphics[width=0.5\linewidth]{listingxprice}
-    %\caption{Prices of listings}
 }
 \subfloat{
 \label{flistingxprice}
     \centering
     \includegraphics[width=0.5\linewidth]{flistingxprice}
-    %\caption{Prices of listings in feedbacks}
     }
     
 \caption[justification=centering]{Distribution of prices in listings and feedbacks\newline }
@@ -1207,8 +1203,8 @@ This leads to minimal revenue, because feedbacks
 can be given only if the trade happened on cryptomarket, while 
 trades happening with no given feedbacks are also possible.
 The total revenue over one month, amount of listigs, feedbacks and market shares for given categories 
-can be found in the \ref{categories} table.
-Market share is a revenue of category divided by total revenue from all categories, which was 527730 EUR.
+can be found in the table \ref{categories}.
+Market share is a revenue of category divided by total revenue from all categories, which was 527\,730 EUR.
 The average price of occured trades was similar in each category
 with two outliers. Opiates, which have a high price/dose ratio and 
 self-defense, which only had 4 trades, 2 of them custom listings and 2 of them guns.
@@ -1244,7 +1240,7 @@ Classifieds &  649 & 18 & 2182 &  121  & 0.4\% \\
 
 Most of the vendors had listings in only a few categories.
 The graph \ref{catxrev} shows the amount of vendors with given revenue and number of different subcategories they have 
-active listings in. Most vendors sell goods only in a few categories, hovewer, vendors with 10000EUR or more in
+active listings in. Most vendors sell goods only in a few categories, hovewer, vendors with 10\,000EUR or more in
 revenue tend to have listings in more categories. The boxchart \ref{boxcat} shows the distribution of vendors revenue
 based on the category they were selling in. We have not counted vendors with 0 revenue for the boxchart.
 If a vendor was selling in multiple categories, we divided his revenue by the number of categories and counted him within all of them.
@@ -1279,19 +1275,19 @@ the number of identified buyers. Buyers total spending and total performed trade
 following statistics are just estimates.
 
 Each buyer have on average bought goods for 1176EUR through all his trades on Valhalla market.
-Just 129 (5 \%) of buyers had bought goods worth 10000EUR in total, rounded,
- 1289 (50 \%) buyers spent 500EUR or less.
+Just 129 (5\%) of buyers had bought goods worth 10\,000EUR or more,
+ 1289 (50\%) buyers spent 500EUR or less.
 This distribution is similar to revenue distribution of vendors, where
 vast majority of actors transfer just small amounts of value through Valhalla market and
 merely an extremely small percentge of actors trade on the market on a bigger scale.
 The average price of one trade (82.7 EUR) and the average of lifetime spendage (1176EUR)
 is way below the amount someone who actively resell drugs for profit would buy.
-The distribution of buyers total spendage is on the \ref{buyerxspend} figure.
+The distribution of buyers total spendage is on the figure \ref{buyerxspend}.
 
 \begin{figure}[!htb]
 \hspace*{-3cm}
-    \label{buyerxspend}
 \subfloat{
+\label{buyerxspend}
     \centering
     \includegraphics[scale=0.4]{buyerxspend}
     %\caption{Rounded amount the buyers totally spent on Valhalla market}
@@ -1312,7 +1308,7 @@ it brought up meaningful and intersting statistics about its vendors and users.
 Our statistical findings fit into the previously published desciptions
 of cryptomarkets, but we also found some statistics where Valhalla market is an outlier and
 came up with reasons why is it so.
-We scraped Valhalla market once, but the data feedbacks dat were
+We scraped Valhalla market once, but the feedbacks data were
 related to the time frame of one month. Continously monitoring 
 Valhalla cryptomarket for longer periods of time could enchance the statistical description
 with data about changes of various trends on this market over time.
@@ -1328,13 +1324,13 @@ The price that we paid in fees in these transactions was less than 100 dollars a
 Perpetual depositing and withdrawals over a prolonged period of time seems financially feasible
 and might lead to disclosing majority of cryptomarkets addresses and transaction.
 
-The application could be extended by adding more heuristics for clustering addresses. Some of these
-heuristics have been described in \parencite{androulaki2013evaluating}.
+The application could be extended by adding more heuristics for clustering addresses from articles mentioned
+in chapter \ref{relw}.
 These heuristics are not based merely on a bitcoin transactions graph, but also
 on expected behaviours of users and data obtainable by continously running one or multiple
 bitcoin nodes. These heuristics are less reliable, but offer more options to cluster addresses of the same owner.
 
-The whole application backend can be run on consumer grade notebook. Backend database as indexed and utilizes memory well,
+The whole application backend can be run on consumer grade notebook. Backend database is indexed and utilizes memory well,
 the GUI requests take at most 30 seconds to process. This represents a great advantage of the application,
 hovewer the application set up takes a long time, for the simple reason that bitcoin
 blockchain consists of roughly 150GB of data and these must be inserted into database, indexed
